--- a/PasswordSaverUI/wxsmith/PasswordSaverUIframe.wxs
+++ b/PasswordSaverUI/wxsmith/PasswordSaverUIframe.wxs
@@ -98,6 +98,15 @@
 							<border>5</border>
 							<option>1</option>
 						</object>
+						<object class="sizeritem">
+							<object class="wxButton" name="ID_BUTTON8" variable="DlgButton" member="yes">
+								<label>Dlg</label>
+								<handler function="OnDlgButtonClick" entry="EVT_BUTTON" />
+							</object>
+							<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+							<border>5</border>
+							<option>1</option>
+						</object>
 					</object>
 					<flag>wxALL|wxALIGN_TOP|wxALIGN_CENTER_HORIZONTAL</flag>
 					<border>5</border>
